feat: steam server -> generated client lib
