# apps/api-server/swagger.json
@@ -1,132 +1,1 @@
-{
-  "openapi": "3.0.0",
-  "paths": {
-    "/": {
-      "get": {
-        "operationId": "AppController_getHello",
-        "parameters": [],
-        "responses": { "200": { "description": "" } }
-      }
-    },
-    "/steam/offers": {
-      "get": {
-        "operationId": "SteamApiController_offers",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "Get all offers",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/GetOffersDto" }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }]
-      }
-    }
-  },
-  "info": {
-    "title": "Internal",
-    "description": "",
-    "version": "1.0",
-    "contact": {}
-  },
-  "tags": [],
-  "servers": [],
-  "components": {
-    "securitySchemes": {
-      "bearer": {
-        "scheme": "bearer",
-        "bearerFormat": "JWT",
-        "type": "http",
-        "name": "Authorization"
-      }
-    },
-    "schemas": {
-      "SteamPartner": {
-        "type": "object",
-        "properties": { "accountid": { "type": "number" } },
-        "required": ["accountid"]
-      },
-      "SteamItem": {
-        "type": "object",
-        "properties": {
-          "id": { "type": "string" },
-          "appid": { "type": "number" },
-          "amount": { "type": "number" },
-          "icon_url": { "type": "string" },
-          "icon_large_url": { "type": "string" },
-          "name": { "type": "string" },
-          "market_name": { "type": "string" },
-          "tradable": { "type": "boolean" },
-          "marketable": { "type": "boolean" },
-          "commodity": { "type": "boolean" },
-          "market_tradable_restriction": { "type": "number" }
-        },
-        "required": [
-          "id",
-          "appid",
-          "amount",
-          "icon_url",
-          "icon_large_url",
-          "name",
-          "market_name",
-          "tradable",
-          "marketable",
-          "commodity",
-          "market_tradable_restriction"
-        ]
-      },
-      "SteamTradoffer": {
-        "type": "object",
-        "properties": {
-          "id": { "type": "string" },
-          "partner": { "$ref": "#/components/schemas/SteamPartner" },
-          "message": { "type": "string" },
-          "state": { "type": "number" },
-          "itemsToGive": {
-            "type": "array",
-            "items": { "$ref": "#/components/schemas/SteamItem" }
-          },
-          "itemsToReceive": {
-            "type": "array",
-            "items": { "$ref": "#/components/schemas/SteamItem" }
-          },
-          "isOurOffer": { "type": "boolean" },
-          "created": { "format": "date-time", "type": "string" },
-          "updated": { "format": "date-time", "type": "string" },
-          "expires": { "format": "date-time", "type": "string" },
-          "confirmationMethod": { "type": "number" }
-        },
-        "required": [
-          "id",
-          "partner",
-          "message",
-          "state",
-          "itemsToGive",
-          "itemsToReceive",
-          "isOurOffer",
-          "created",
-          "updated",
-          "expires",
-          "confirmationMethod"
-        ]
-      },
-      "GetOffersDto": {
-        "type": "object",
-        "properties": {
-          "sent": {
-            "type": "array",
-            "items": { "$ref": "#/components/schemas/SteamTradoffer" }
-          },
-          "received": {
-            "type": "array",
-            "items": { "$ref": "#/components/schemas/SteamTradoffer" }
-          }
-        },
-        "required": ["sent", "received"]
-      }
-    }
-  }
-}
+{"openapi":"3.0.0","paths":{"/":{"get":{"operationId":"AppController_getHello","parameters":[],"responses":{"200":{"description":""}}}},"/steam/offers":{"get":{"operationId":"SteamApiController_offers","parameters":[],"responses":{"200":{"description":"Get all offers","content":{"application/json":{"schema":{"$ref":"#/components/schemas/GetOffersDto"}}}}},"security":[{"bearer":[]}]}}},"info":{"title":"Internal","description":"","version":"1.0","contact":{}},"tags":[],"servers":[],"components":{"securitySchemes":{"bearer":{"scheme":"bearer","bearerFormat":"JWT","type":"http","name":"Authorization"}},"schemas":{"SteamPartner":{"type":"object","properties":{"accountid":{"type":"number"}},"required":["accountid"]},"SteamItem":{"type":"object","properties":{"id":{"type":"string"},"appid":{"type":"number"},"amount":{"type":"number"},"icon_url":{"type":"string"},"icon_large_url":{"type":"string"},"name":{"type":"string"},"market_name":{"type":"string"},"tradable":{"type":"boolean"},"marketable":{"type":"boolean"},"commodity":{"type":"boolean"},"market_tradable_restriction":{"type":"number"}},"required":["id","appid","amount","icon_url","icon_large_url","name","market_name","tradable","marketable","commodity","market_tradable_restriction"]},"SteamTradoffer":{"type":"object","properties":{"id":{"type":"string"},"partner":{"$ref":"#/components/schemas/SteamPartner"},"message":{"type":"string"},"state":{"type":"number"},"itemsToGive":{"type":"array","items":{"$ref":"#/components/schemas/SteamItem"}},"itemsToReceive":{"type":"array","items":{"$ref":"#/components/schemas/SteamItem"}},"isOurOffer":{"type":"boolean"},"created":{"format":"date-time","type":"string"},"updated":{"format":"date-time","type":"string"},"expires":{"format":"date-time","type":"string"},"confirmationMethod":{"type":"number"}},"required":["id","partner","message","state","itemsToGive","itemsToReceive","isOurOffer","created","updated","expires","confirmationMethod"]},"GetOffersDto":{"type":"object","properties":{"sent":{"type":"array","items":{"$ref":"#/components/schemas/SteamTradoffer"}},"received":{"type":"array","items":{"$ref":"#/components/schemas/SteamTradoffer"}}},"required":["sent","received"]}}}}
